# hvcommon

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  conanfile.py  settings.yml
cmake/: Config.cmake.in  FindGTest.cmake  YAML.cmake  codecoverage.cmake
docs/: Doxyfile.in  README.md
docs/bitvector/: README.md
docs/callback/: README.md
scripts/: ci-before.py
src/: CMakeLists.txt  HVCommon  bitvector.cpp  bitvector.h  callback.h  common.h  cplusplus.h  datatypes.h  fifo.h  filtered_range.h  hvlog.h  hvutils.cpp  hvutils.h  log-level.h  log.cpp  log.h  texttable.h
tests/: CMakeLists.txt  bitvectortest.cpp  callbacktest.cpp  cplusplus.cpp  fifotest.cpp  gtestrunner.cpp  hvutilstest.cpp  log-test.cpp
tests/conan/: CMakeLists.txt  conanfile.py  example.cpp
